Fixed the navbar that it is visible

--- a/pages/Landingpage/Landingpage.module.css
+++ b/pages/Landingpage/Landingpage.module.css
@@ -5,6 +5,7 @@
 	border: 0.15rem solid var(--primary);
 	border-radius: 2rem;
 	padding: 0.5rem 1rem;
+	box-shadow: rgba(0, 0, 0, 0.15) 2.4px 2.4px 3.2px;
 	cursor: pointer;
 	transition: all 200ms ease-in;
 }
@@ -14,6 +15,7 @@
 	background-color: var(--primary);
 	border-radius: 2rem;
 	color: var(--white);
+	box-shadow: rgba(0, 0, 0, 0.15) 2.4px 2.4px 3.2px;
 }
 
 .vHeader {
