--- a/pages/components/molecules/Navbar/Navbar.module.css
+++ b/pages/components/molecules/Navbar/Navbar.module.css
@@ -6,6 +6,8 @@
 	display: flex;
 	justify-content: flex-end;
 	align-items: center;
+	z-index: 2;
+	position: relative;
 }
 
 .navItem {
@@ -15,14 +17,14 @@
 
 .navItem a {
 	text-decoration: none;
-	color: var(--text);
+	color: var(--white);
 	font-weight: 500;
 	transition: all 200ms ease-in-out;
 }
 
 .navItem a:hover {
-	color: var(--primary);
-	border-bottom: 3px solid var(--primary);
+	color: var(--white);
+	border-bottom: 3px solid var(--white);
 	padding-bottom: 1rem;
 }
 
@@ -40,12 +42,14 @@
 	border-radius: 2rem;
 	padding: 0.5rem 1rem;
 	cursor: pointer;
+	box-shadow: rgba(0, 0, 0, 0.15) 2.4px 2.4px 3.2px;
 	transition: all 200ms ease-in;
 }
 
 .ctaButton:hover {
 	border: 0.15rem solid var(--primary);
 	background-color: var(--primary);
+	box-shadow: rgba(0, 0, 0, 0.15) 2.4px 2.4px 3.2px;
 	border-radius: 2rem;
 	color: var(--white);
 }
